// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apiHandler should load a new project from Velho 1`] = `
Object {
  "__typename": "Projekti",
  "asianhallinta": Object {
    "__typename": "Asianhallinta",
    "aktivoitavissa": false,
    "inaktiivinen": true,
  },
  "ennakkoNeuvottelu": Object {
    "__typename": "EnnakkoNeuvottelu",
    "tuodutTiedostot": Object {
      "__typename": "HyvaksymisEsityksenTuodutTiedostot",
      "kuulutuksetJaKutsu": Array [],
      "maanomistajaluettelo": Array [],
    },
  },
  "kayttoOikeudet": Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "etunimi": "Pekka",
      "kayttajatunnus": "A123",
      "muokattavissa": false,
      "organisaatio": "Väylävirasto",
      "sukunimi": "Projari",
      "tyyppi": "PROJEKTIPAALLIKKO",
      "yleinenYhteystieto": true,
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "etunimi": "Matti",
      "kayttajatunnus": "A000111",
      "muokattavissa": true,
      "organisaatio": "ELY",
      "sukunimi": "Meikäläinen",
      "tyyppi": "VARAHENKILO",
    },
  ],
  "muistiinpano": "Testiprojekti 1:n muistiinpano",
  "muistutusMaara": 0,
  "oid": "1",
  "tallennettu": false,
  "tyyppi": "TIE",
  "velho": Object {
    "__typename": "Velho",
    "asiatunnusELY": "ELY/123/01.01.01/2023",
    "kunnat": Array [
      12,
    ],
    "linkitetytProjektit": undefined,
    "maakunnat": undefined,
    "nimi": "Testiprojekti 1",
    "suunnittelustaVastaavaViranomainen": "ETELA_POHJANMAAN_ELY",
    "tyyppi": "TIE",
    "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
  },
  "versio": 1,
}
`;

exports[`apiHandler should modify permissions from a project successfully 1`] = `
Array [
  "Initial state with projektipaallikko and omistaja",
  Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "pekka.projari@vayla.fi",
      "etunimi": "Pekka",
      "kayttajatunnus": "A123",
      "muokattavissa": false,
      "organisaatio": "Väylävirasto",
      "sukunimi": "Projari",
      "tyyppi": "PROJEKTIPAALLIKKO",
      "yleinenYhteystieto": true,
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "email": "matti.meikalainen@vayla.fi",
      "etunimi": "Matti",
      "kayttajatunnus": "A000111",
      "muokattavissa": true,
      "organisaatio": "ELY",
      "sukunimi": "Meikäläinen",
      "tyyppi": "VARAHENKILO",
    },
  ],
]
`;

exports[`apiHandler should modify permissions from a project successfully 2`] = `
Array [
  "Create projekti having both projektipaallikko and omistaja",
  Object {
    "kayttoOikeudet": Array [
      Object {
        "elyOrganisaatio": undefined,
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "elyOrganisaatio": undefined,
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "22",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": true,
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "oid": "1",
    "tallennettu": true,
    "velho": Object {
      "asiatunnusELY": "ELY/123/01.01.01/2023",
      "kunnat": Array [
        12,
      ],
      "nimi": "Testiprojekti 1",
      "suunnittelustaVastaavaViranomainen": "ETELA_POHJANMAAN_ELY",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
    "versio": 1,
  },
]
`;

exports[`apiHandler should modify permissions from a project successfully 3`] = `
Array [
  "Loaded projekti having both projektipaallikko and omistaja",
  Object {
    "__typename": "Projekti",
    "asianhallinta": Object {
      "__typename": "Asianhallinta",
      "aktiivinenTila": Object {
        "__typename": "AktiivisenVaiheenAsianhallinnanTila",
        "tila": undefined,
        "vaihe": "ALOITUSKUULUTUS",
      },
      "aktivoitavissa": false,
      "inaktiivinen": true,
      "linkkiAsianhallintaan": undefined,
    },
    "ennakkoNeuvottelu": Object {
      "__typename": "EnnakkoNeuvottelu",
      "tuodutTiedostot": Object {
        "__typename": "HyvaksymisEsityksenTuodutTiedostot",
        "kuulutuksetJaKutsu": Array [],
        "maanomistajaluettelo": Array [],
      },
    },
    "julkinenStatus": "EI_JULKAISTU",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "elyOrganisaatio": undefined,
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "elyOrganisaatio": undefined,
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "22",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": true,
      },
    ],
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "muistutusMaara": 0,
    "oid": "1",
    "status": "EI_JULKAISTU",
    "suunnitelmaJaettu": Array [],
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "asiatunnusELY": "ELY/123/01.01.01/2023",
      "kunnat": Array [
        12,
      ],
      "linkitetytProjektit": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "suunnittelustaVastaavaViranomainen": "ETELA_POHJANMAAN_ELY",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
    "versio": 1,
  },
]
`;

exports[`apiHandler should modify permissions from a project successfully 4`] = `
Array [
  "Save projekti having only projektipaallikko",
  Object {
    "aloitusKuulutus": undefined,
    "asianhallinta": undefined,
    "euRahoitus": undefined,
    "euRahoitusLogot": undefined,
    "hyvaksymisPaatosVaihe": undefined,
    "jatkoPaatos1Vaihe": undefined,
    "jatkoPaatos2Vaihe": undefined,
    "kasittelynTila": undefined,
    "kayttoOikeudet": Array [
      Object {
        "elyOrganisaatio": undefined,
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
    ],
    "kielitiedot": undefined,
    "kustannuspaikka": undefined,
    "lausuntoPyynnonTaydennykset": undefined,
    "lausuntoPyynnot": undefined,
    "lyhytOsoite": "ABCD",
    "muistiinpano": undefined,
    "nahtavillaoloVaihe": undefined,
    "oid": "1",
    "salt": "***unittest***",
    "suunnitteluSopimus": undefined,
    "vahainenMenettely": undefined,
    "versio": 1,
    "vuorovaikutusKierros": undefined,
  },
]
`;

exports[`apiHandler should modify permissions from a project successfully 5`] = `
Array [
  "Loaded projekti having only projektipaallikko",
  Object {
    "__typename": "Projekti",
    "asianhallinta": Object {
      "__typename": "Asianhallinta",
      "aktiivinenTila": Object {
        "__typename": "AktiivisenVaiheenAsianhallinnanTila",
        "tila": undefined,
        "vaihe": "ALOITUSKUULUTUS",
      },
      "aktivoitavissa": false,
      "inaktiivinen": true,
      "linkkiAsianhallintaan": undefined,
    },
    "ennakkoNeuvottelu": Object {
      "__typename": "EnnakkoNeuvottelu",
      "tuodutTiedostot": Object {
        "__typename": "HyvaksymisEsityksenTuodutTiedostot",
        "kuulutuksetJaKutsu": Array [],
        "maanomistajaluettelo": Array [],
      },
    },
    "julkinenStatus": "EI_JULKAISTU",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "elyOrganisaatio": undefined,
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
    ],
    "lyhytOsoite": "ABCD",
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "muistutusMaara": 0,
    "oid": "1",
    "status": "EI_JULKAISTU",
    "suunnitelmaJaettu": Array [],
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "asiatunnusELY": "ELY/123/01.01.01/2023",
      "kunnat": Array [
        12,
      ],
      "linkitetytProjektit": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "suunnittelustaVastaavaViranomainen": "ETELA_POHJANMAAN_ELY",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
    "versio": 1,
  },
]
`;

exports[`apiHandler should modify permissions from a project successfully 6`] = `
Array [
  "Save projekti having while adding other user back. There should be projektipaallikko and one user in the projekti now. Projektipaallikko cannot be removed, so it always stays there.",
  Object {
    "aloitusKuulutus": undefined,
    "asianhallinta": undefined,
    "euRahoitus": undefined,
    "euRahoitusLogot": undefined,
    "hyvaksymisPaatosVaihe": undefined,
    "jatkoPaatos1Vaihe": undefined,
    "jatkoPaatos2Vaihe": undefined,
    "kasittelynTila": undefined,
    "kayttoOikeudet": Array [
      Object {
        "elyOrganisaatio": undefined,
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "elyOrganisaatio": undefined,
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
    ],
    "kielitiedot": undefined,
    "kustannuspaikka": undefined,
    "lausuntoPyynnonTaydennykset": undefined,
    "lausuntoPyynnot": undefined,
    "muistiinpano": undefined,
    "nahtavillaoloVaihe": undefined,
    "oid": "1",
    "salt": "***unittest***",
    "suunnitteluSopimus": undefined,
    "vahainenMenettely": undefined,
    "versio": 1,
    "vuorovaikutusKierros": undefined,
  },
]
`;

exports[`apiHandler should modify permissions from a project successfully 7`] = `
Array [
  "Loaded projekti having while adding other user back. There should be projektipaallikko and one user in the projekti now. Projektipaallikko cannot be removed, so it always stays there.",
  Object {
    "__typename": "Projekti",
    "asianhallinta": Object {
      "__typename": "Asianhallinta",
      "aktiivinenTila": Object {
        "__typename": "AktiivisenVaiheenAsianhallinnanTila",
        "tila": undefined,
        "vaihe": "ALOITUSKUULUTUS",
      },
      "aktivoitavissa": false,
      "inaktiivinen": true,
      "linkkiAsianhallintaan": undefined,
    },
    "ennakkoNeuvottelu": Object {
      "__typename": "EnnakkoNeuvottelu",
      "tuodutTiedostot": Object {
        "__typename": "HyvaksymisEsityksenTuodutTiedostot",
        "kuulutuksetJaKutsu": Array [],
        "maanomistajaluettelo": Array [],
      },
    },
    "julkinenStatus": "EI_JULKAISTU",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "elyOrganisaatio": undefined,
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "elyOrganisaatio": undefined,
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
    ],
    "lyhytOsoite": "ABCD",
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "muistutusMaara": 0,
    "oid": "1",
    "status": "EI_JULKAISTU",
    "suunnitelmaJaettu": Array [],
    "tallennettu": true,
    "tyyppi": "TIE",
    "velho": Object {
      "__typename": "Velho",
      "asiatunnusELY": "ELY/123/01.01.01/2023",
      "kunnat": Array [
        12,
      ],
      "linkitetytProjektit": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "suunnittelustaVastaavaViranomainen": "ETELA_POHJANMAAN_ELY",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
    "versio": 1,
  },
]
`;

exports[`apiHandler should modify permissions from a project successfully 8`] = `
Array [
  "Save projekti having while adding one muokkaaja more. There should be three persons in the projekti now",
  Object {
    "aloitusKuulutus": Object {
      "hankkeenKuvaus": Object {
        "RUOTSI": "På Svenska",
        "SUOMI": "Lorem Ipsum",
      },
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "kunnat": Array [
          Object {
            "id": 491,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "id": 178,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "id": 740,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "maakunnat": undefined,
        "viranomaiset": Array [
          Object {
            "lahetetty": "2022-09-28T00:00",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-01-02",
      "kuulutusYhteystiedot": Object {
        "yhteysHenkilot": Array [
          "A000124",
        ],
        "yhteysTiedot": Array [
          Object {
            "etunimi": "Marko",
            "kunta": undefined,
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "siirtyySuunnitteluVaiheeseen": "2999-01-01",
    },
    "asianhallinta": undefined,
    "euRahoitus": false,
    "euRahoitusLogot": undefined,
    "hyvaksymisPaatosVaihe": undefined,
    "jatkoPaatos1Vaihe": undefined,
    "jatkoPaatos2Vaihe": undefined,
    "kasittelynTila": undefined,
    "kayttoOikeudet": Array [
      Object {
        "elyOrganisaatio": undefined,
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "elyOrganisaatio": undefined,
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
      Object {
        "elyOrganisaatio": undefined,
        "email": "a2@vayla.fi",
        "etunimi": "EtunimiA2",
        "kayttajatunnus": "A2",
        "muokattavissa": true,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "123456789",
        "sukunimi": "SukunimiA2",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
    ],
    "kielitiedot": Object {
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "POHJOISSAAME",
    },
    "kustannuspaikka": undefined,
    "lausuntoPyynnonTaydennykset": undefined,
    "lausuntoPyynnot": undefined,
    "muistiinpano": undefined,
    "nahtavillaoloVaihe": undefined,
    "oid": "1",
    "salt": "***unittest***",
    "suunnitteluSopimus": Object {
      "kunta": 536,
      "logo": Object {
        "RUOTSI": undefined,
        "SUOMI": "/suunnittelusopimus/logo.gif",
      },
      "yhteysHenkilo": "A2",
    },
    "vahainenMenettely": false,
    "versio": 1,
    "vuorovaikutusKierros": undefined,
  },
]
`;

exports[`apiHandler should modify permissions from a project successfully 9`] = `
Array [
  "Loaded projekti having while adding one muokkaaja more. There should be three persons in the projekti now",
  Object {
    "__typename": "Projekti",
    "aloitusKuulutus": Object {
      "__typename": "AloitusKuulutus",
      "aloituskuulutusSaamePDFt": undefined,
      "hankkeenKuvaus": Object {
        "RUOTSI": "På Svenska",
        "SUOMI": "Lorem Ipsum",
        "__typename": "LokalisoituTeksti",
      },
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-09-28T00:00",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "maakunnat": Array [],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-09-28T00:00",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-01-02",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "kunta": undefined,
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      "muokkausTila": "MUOKKAUS",
      "siirtyySuunnitteluVaiheeseen": "2999-01-01",
      "uudelleenKuulutus": undefined,
    },
    "asianhallinta": Object {
      "__typename": "Asianhallinta",
      "aktiivinenTila": Object {
        "__typename": "AktiivisenVaiheenAsianhallinnanTila",
        "tila": undefined,
        "vaihe": "ALOITUSKUULUTUS",
      },
      "aktivoitavissa": false,
      "inaktiivinen": true,
      "linkkiAsianhallintaan": undefined,
    },
    "ennakkoNeuvottelu": Object {
      "__typename": "EnnakkoNeuvottelu",
      "tuodutTiedostot": Object {
        "__typename": "HyvaksymisEsityksenTuodutTiedostot",
        "kuulutuksetJaKutsu": Array [],
        "maanomistajaluettelo": Array [],
      },
    },
    "euRahoitus": false,
    "julkinenStatus": "EI_JULKAISTU",
    "kayttoOikeudet": Array [
      Object {
        "__typename": "ProjektiKayttaja",
        "elyOrganisaatio": undefined,
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "kayttajatunnus": "A123",
        "muokattavissa": false,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "11",
        "sukunimi": "Projari",
        "tyyppi": "PROJEKTIPAALLIKKO",
        "yleinenYhteystieto": true,
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "elyOrganisaatio": undefined,
        "email": "matti.meikalainen@vayla.fi",
        "etunimi": "Matti",
        "kayttajatunnus": "A000111",
        "muokattavissa": true,
        "organisaatio": "ELY",
        "puhelinnumero": "123456789",
        "sukunimi": "Meikäläinen",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
      Object {
        "__typename": "ProjektiKayttaja",
        "elyOrganisaatio": undefined,
        "email": "a2@vayla.fi",
        "etunimi": "EtunimiA2",
        "kayttajatunnus": "A2",
        "muokattavissa": true,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "123456789",
        "sukunimi": "SukunimiA2",
        "tyyppi": undefined,
        "yleinenYhteystieto": undefined,
      },
    ],
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "POHJOISSAAME",
    },
    "lyhytOsoite": "ABCD",
    "muistiinpano": "Testiprojekti 1:n muistiinpano",
    "muistutusMaara": 0,
    "oid": "1",
    "status": "ALOITUSKUULUTUS",
    "suunnitelmaJaettu": Array [],
    "suunnitteluSopimus": Object {
      "__typename": "SuunnitteluSopimus",
      "kunta": 536,
      "logo": Object {
        "RUOTSI": undefined,
        "SUOMI": "/yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
        "__typename": "LokalisoituTeksti",
      },
      "yhteysHenkilo": "A2",
    },
    "tallennettu": true,
    "tyyppi": "TIE",
    "vahainenMenettely": false,
    "velho": Object {
      "__typename": "Velho",
      "asiatunnusELY": "ELY/123/01.01.01/2023",
      "kunnat": Array [
        12,
      ],
      "linkitetytProjektit": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "suunnittelustaVastaavaViranomainen": "ETELA_POHJANMAAN_ELY",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
    "versio": 1,
  },
]
`;

exports[`apiHandler should modify permissions from a project successfully 10`] = `
Object {
  "__typename": "Projekti",
  "aloitusKuulutus": Object {
    "__typename": "AloitusKuulutus",
    "aloituskuulutusSaamePDFt": undefined,
    "hankkeenKuvaus": Object {
      "RUOTSI": "På Svenska",
      "SUOMI": "Lorem Ipsum",
      "__typename": "LokalisoituTeksti",
    },
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 491,
          "lahetetty": "2022-09-28T00:00",
          "messageId": "messageId_test",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 178,
          "lahetetty": "2022-09-28T00:00",
          "messageId": "messageId_test",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 740,
          "lahetetty": "2022-09-28T00:00",
          "messageId": "messageId_test",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "maakunnat": Array [],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-09-28T00:00",
          "messageId": "messageId_test",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "__typename": "StandardiYhteystiedot",
      "yhteysHenkilot": Array [],
      "yhteysTiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "kunta": undefined,
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "muokkausTila": "LUKU",
    "palautusSyy": null,
    "siirtyySuunnitteluVaiheeseen": "2999-01-01",
    "uudelleenKuulutus": undefined,
  },
  "aloitusKuulutusJulkaisu": Object {
    "__typename": "AloitusKuulutusJulkaisu",
    "aloituskuulutusPDFt": Object {
      "SUOMI": Object {
        "__typename": "AloitusKuulutusPDF",
        "aloituskuulutusIlmoitusPDFPath": "/yllapito/tiedostot/projekti/1/aloituskuulutus/1/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
        "aloituskuulutusPDFPath": "/yllapito/tiedostot/projekti/1/aloituskuulutus/1/T412 Aloituskuulutus.pdf",
      },
      "__typename": "AloitusKuulutusPDFt",
    },
    "aloituskuulutusSaamePDFt": Object {
      "POHJOISSAAME": Object {
        "__typename": "KuulutusSaamePDF",
        "kirjeTiedotettavillePDF": undefined,
        "kuulutusIlmoitusPDF": undefined,
        "kuulutusPDF": undefined,
      },
      "__typename": "KuulutusSaamePDFt",
    },
    "asianhallintaSynkronointiTila": "EI_TESTATTAVISSA",
    "hankkeenKuvaus": Object {
      "RUOTSI": "På Svenska",
      "SUOMI": "Lorem Ipsum",
      "__typename": "LokalisoituTeksti",
    },
    "hyvaksyja": "A123",
    "hyvaksymisPaiva": "2022-09-28",
    "id": 1,
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 491,
          "lahetetty": "2022-09-28T00:00",
          "messageId": "messageId_test",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 178,
          "lahetetty": "2022-09-28T00:00",
          "messageId": "messageId_test",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 740,
          "lahetetty": "2022-09-28T00:00",
          "messageId": "messageId_test",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "maakunnat": Array [],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-09-28T00:00",
          "messageId": "messageId_test",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "julkaisuOnKopio": false,
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "POHJOISSAAME",
    },
    "kuulutusPaiva": "2022-01-02",
    "kuulutusYhteystiedot": Object {
      "__typename": "StandardiYhteystiedot",
      "yhteysHenkilot": Array [
        "A2",
      ],
      "yhteysTiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "kunta": undefined,
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "lahetekirje": Object {
      "nimi": "lähetekirje.eml",
      "tiedosto": "/aloituskuulutus/1/lähetekirje.eml",
      "tila": "VALMIS",
      "tuotu": "2022-01-02T00:00",
      "uuid": "00000001-9fb0-4b22-995e-20a9a256a9f9",
    },
    "muokkaaja": "A123",
    "siirtyySuunnitteluVaiheeseen": "2999-01-01",
    "suunnitteluSopimus": Object {
      "__typename": "SuunnitteluSopimusJulkaisu",
      "email": "a2@vayla.fi",
      "etunimi": "EtunimiA2",
      "kunta": 536,
      "logo": Object {
        "RUOTSI": undefined,
        "SUOMI": "/yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
        "__typename": "LokalisoituTeksti",
      },
      "puhelinnumero": "123456789",
      "sukunimi": "SukunimiA2",
    },
    "tila": "HYVAKSYTTY",
    "uudelleenKuulutus": undefined,
    "velho": Object {
      "__typename": "Velho",
      "asiatunnusELY": "ELY/123/01.01.01/2023",
      "kunnat": Array [
        12,
      ],
      "linkitetytProjektit": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "suunnittelustaVastaavaViranomainen": "ETELA_POHJANMAAN_ELY",
      "tyyppi": "TIE",
      "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
    },
    "yhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "elyOrganisaatio": undefined,
        "etunimi": "EtunimiA2",
        "kunta": 536,
        "organisaatio": "Väylävirasto",
        "puhelinnumero": "123456789",
        "sahkoposti": "a2@vayla.fi",
        "sukunimi": "SukunimiA2",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Marko",
        "kunta": undefined,
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
  },
  "asianhallinta": Object {
    "__typename": "Asianhallinta",
    "aktiivinenTila": Object {
      "__typename": "AktiivisenVaiheenAsianhallinnanTila",
      "tila": undefined,
      "vaihe": "SUUNNITTELU",
    },
    "aktivoitavissa": false,
    "inaktiivinen": true,
    "linkkiAsianhallintaan": undefined,
  },
  "ennakkoNeuvottelu": Object {
    "__typename": "EnnakkoNeuvottelu",
    "tuodutTiedostot": Object {
      "__typename": "HyvaksymisEsityksenTuodutTiedostot",
      "kuulutuksetJaKutsu": Array [
        Object {
          "__typename": "LadattavaTiedosto",
          "kategoriaId": undefined,
          "linkki": "http://localhost:4566/hassu-localstack-yllapito/yllapito/tiedostot/projekti/1/aloituskuulutus/1/T412%20Aloituskuulutus.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=test%2F20220101%2Feu-west-1%2Fs3%2Faws4_request&X-Amz-Date=20220101T220001Z&X-Amz-Expires=3600&X-Amz-Signature=7646786873e908af05075014822fed0e49775ca95763dd03cdaaa6e2f93a106d&X-Amz-SignedHeaders=host&x-id=GetObject",
          "nimi": "T412 Aloituskuulutus.pdf",
          "tuotu": undefined,
        },
        Object {
          "__typename": "LadattavaTiedosto",
          "kategoriaId": undefined,
          "linkki": "http://localhost:4566/hassu-localstack-yllapito/yllapito/tiedostot/projekti/1/Saame.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=test%2F20220101%2Feu-west-1%2Fs3%2Faws4_request&X-Amz-Date=20220101T220001Z&X-Amz-Expires=3600&X-Amz-Signature=386a6f4c7ca74f2737afc18be8afd27cfa8c64e52d42b10c7eead03487962a40&X-Amz-SignedHeaders=host&x-id=GetObject",
          "nimi": "Saame.pdf",
          "tuotu": undefined,
        },
      ],
      "maanomistajaluettelo": Array [],
    },
  },
  "euRahoitus": false,
  "julkinenStatus": "ALOITUSKUULUTUS",
  "kayttoOikeudet": Array [
    Object {
      "__typename": "ProjektiKayttaja",
      "elyOrganisaatio": undefined,
      "email": "pekka.projari@vayla.fi",
      "etunimi": "Pekka",
      "kayttajatunnus": "A123",
      "muokattavissa": false,
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "11",
      "sukunimi": "Projari",
      "tyyppi": "PROJEKTIPAALLIKKO",
      "yleinenYhteystieto": true,
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "elyOrganisaatio": undefined,
      "email": "matti.meikalainen@vayla.fi",
      "etunimi": "Matti",
      "kayttajatunnus": "A000111",
      "muokattavissa": true,
      "organisaatio": "ELY",
      "puhelinnumero": "123456789",
      "sukunimi": "Meikäläinen",
      "tyyppi": undefined,
      "yleinenYhteystieto": undefined,
    },
    Object {
      "__typename": "ProjektiKayttaja",
      "elyOrganisaatio": undefined,
      "email": "a2@vayla.fi",
      "etunimi": "EtunimiA2",
      "kayttajatunnus": "A2",
      "muokattavissa": true,
      "organisaatio": "Väylävirasto",
      "puhelinnumero": "123456789",
      "sukunimi": "SukunimiA2",
      "tyyppi": undefined,
      "yleinenYhteystieto": undefined,
    },
  ],
  "kielitiedot": Object {
    "__typename": "Kielitiedot",
    "ensisijainenKieli": "SUOMI",
    "projektinNimiVieraskielella": "Projektin nimi saameksi",
    "toissijainenKieli": "POHJOISSAAME",
  },
  "lyhytOsoite": "ABCD",
  "muistiinpano": "Testiprojekti 1:n muistiinpano",
  "muistutusMaara": 0,
  "oid": "1",
  "status": "SUUNNITTELU",
  "suunnitelmaJaettu": Array [],
  "suunnitteluSopimus": Object {
    "__typename": "SuunnitteluSopimus",
    "kunta": 536,
    "logo": Object {
      "RUOTSI": undefined,
      "SUOMI": "/yllapito/tiedostot/projekti/1/suunnittelusopimus/logo.gif",
      "__typename": "LokalisoituTeksti",
    },
    "yhteysHenkilo": "A2",
  },
  "tallennettu": true,
  "tyyppi": "TIE",
  "vahainenMenettely": false,
  "velho": Object {
    "__typename": "Velho",
    "asiatunnusELY": "ELY/123/01.01.01/2023",
    "kunnat": Array [
      12,
    ],
    "linkitetytProjektit": undefined,
    "maakunnat": undefined,
    "nimi": "Testiprojekti 1",
    "suunnittelustaVastaavaViranomainen": "ETELA_POHJANMAAN_ELY",
    "tyyppi": "TIE",
    "vastuuhenkilonEmail": "pekka.projari@vayla.fi",
  },
  "versio": 1,
}
`;

exports[`apiHandler should modify permissions from a project successfully 11`] = `
Object {
  "description": "Public version of the projekti",
  "projekti": Object {
    "__typename": "ProjektiJulkinen",
    "aloitusKuulutusJulkaisu": Object {
      "__typename": "AloitusKuulutusJulkaisuJulkinen",
      "aloituskuulutusSaamePDFt": Object {
        "POHJOISSAAME": Object {
          "__typename": "KuulutusSaamePDF",
          "kirjeTiedotettavillePDF": undefined,
          "kuulutusIlmoitusPDF": undefined,
          "kuulutusPDF": undefined,
        },
        "__typename": "KuulutusSaamePDFt",
      },
      "hankkeenKuvaus": Object {
        "RUOTSI": "På Svenska",
        "SUOMI": "Lorem Ipsum",
        "__typename": "LokalisoituTeksti",
      },
      "id": 1,
      "julkaisuOnKopio": false,
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
        "projektinNimiVieraskielella": "Projektin nimi saameksi",
        "toissijainenKieli": "POHJOISSAAME",
      },
      "kuulutusPDF": Object {
        "SUOMI": "/tiedostot/suunnitelma/1/aloituskuulutus/T412 Aloituskuulutus.pdf",
        "__typename": "KuulutusPDFJulkinen",
      },
      "kuulutusPaiva": "2022-01-02",
      "kuulutusTekstit": Object {
        "__typename": "KuulutusTekstit",
        "infoTekstit": Array [
          "Asianosaisten katsotaan saaneen tiedon suunnittelun käynnistymisestä ja tutkimusoikeudesta seitsemäntenä päivänä kuulutuksen julkaisusta (hallintolaki 62 a §). Tämän jälkeen suunnitelmasta vastaavalla on oikeus tehdä kiinteistöillä suunnittelutyön vaatimia mittauksia, maaperätutkimuksia ja muita valmistelevia toimenpiteitä. Asianosaisilla on oikeus olla tutkimuksissa paikalla ja ilmaista mielipiteensä asiassa. (laki liikennejärjestelmästä ja maanteistä LjMTL 16 §).",
          "Suunnitelman luonnosvaiheessa tiedotetaan yleisesti mahdollisuudesta kertoa mielipide suunnitelmasta. Kun suunnitelma on valmis, se asetetaan yleisesti nähtäville. Nähtäville asettamisesta julkaistaan kuulutus ja tiedotetaan asianosaisia. Tässä vaiheessa suunnitelmasta on mahdollisuus tehdä kirjallinen muistutus. (LjMTL 27 § ja valtioneuvoston asetus maanteistä 3 §). ",
        ],
        "kuvausTekstit": Array [
          "Nokia on 2.1.2022 julkaissut kuulutuksen suunnittelun aloittamisesta ja maastotutkimuksista osoitteessa <a href=\\"https://localhost:3000/s/ABCD/aloituskuulutus\\">https://localhost:3000/s/ABCD/aloituskuulutus</a>. Kuulutus pidetään nähtävillä <strong>2.1.2022 - 1.2.2022</strong>.",
        ],
        "leipaTekstit": Array [
          "Nokia, sovittuaan asiasta Etelä-Pohjanmaan ELY-keskuksen kanssa, aloittaa otsikon mukaisen tiesuunnitelman laatimisen ja suunnitelman vaatimat maastotyöt ja tutkimukset.",
        ],
        "tietosuoja": "Etelä-Pohjanmaan elinkeino-, liikenne- ja ympäristökeskus käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, <a external=\\"true\\" href=\\"https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely\\">https://www.ely-keskus.fi/tietosuoja-ja-henkilotietojen-kasittely</a>.",
      },
      "siirtyySuunnitteluVaiheeseen": "2999-01-01",
      "suunnitelmaJaettu": undefined,
      "suunnitteluSopimus": Object {
        "__typename": "SuunnitteluSopimusJulkaisu",
        "email": "a2@vayla.fi",
        "etunimi": "EtunimiA2",
        "kunta": 536,
        "logo": Object {
          "RUOTSI": undefined,
          "SUOMI": "/tiedostot/suunnitelma/1/suunnittelusopimus/logo.gif",
          "__typename": "LokalisoituTeksti",
        },
        "puhelinnumero": "123456789",
        "sukunimi": "SukunimiA2",
      },
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": undefined,
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": "ELY/123/01.01.01/2023",
        "asiatunnusVayla": undefined,
        "geoJSON": undefined,
        "kunnat": Array [
          12,
        ],
        "kuvaus": undefined,
        "linkki": undefined,
        "maakunnat": undefined,
        "nimi": "Testiprojekti 1",
        "suunnittelustaVastaavaViranomainen": "ETELA_POHJANMAAN_ELY",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": undefined,
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "elyOrganisaatio": undefined,
          "etunimi": "EtunimiA2",
          "kunta": 536,
          "organisaatio": "Väylävirasto",
          "puhelinnumero": "123456789",
          "sahkoposti": "a2@vayla.fi",
          "sukunimi": "SukunimiA2",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "kunta": undefined,
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "euRahoitus": false,
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
      "projektinNimiVieraskielella": "Projektin nimi saameksi",
      "toissijainenKieli": "POHJOISSAAME",
    },
    "lyhytOsoite": "ABCD",
    "oid": "1",
    "projektiHenkilot": Array [
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "elyOrganisaatio": undefined,
        "email": "pekka.projari@vayla.fi",
        "etunimi": "Pekka",
        "organisaatio": "Väylävirasto",
        "projektiPaallikko": true,
        "puhelinnumero": "11",
        "sukunimi": "Projari",
      },
    ],
    "status": "ALOITUSKUULUTUS",
    "suunnitteluSopimus": Object {
      "__typename": "SuunnitteluSopimusJulkaisu",
      "email": "a2@vayla.fi",
      "etunimi": "EtunimiA2",
      "kunta": 536,
      "logo": Object {
        "RUOTSI": undefined,
        "SUOMI": "/tiedostot/suunnitelma/1/suunnittelusopimus/logo.gif",
        "__typename": "LokalisoituTeksti",
      },
      "puhelinnumero": "123456789",
      "sukunimi": "SukunimiA2",
    },
    "vahainenMenettely": false,
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": "ELY/123/01.01.01/2023",
      "asiatunnusVayla": undefined,
      "geoJSON": undefined,
      "kunnat": Array [
        12,
      ],
      "kuvaus": undefined,
      "linkki": undefined,
      "maakunnat": undefined,
      "nimi": "Testiprojekti 1",
      "suunnittelustaVastaavaViranomainen": "ETELA_POHJANMAAN_ELY",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": undefined,
    },
  },
}
`;
